--- a/nginx/html/index.html
+++ b/nginx/html/index.html
@@ -3,6 +3,6 @@
     <title> Welcome page </title>
 </head>
     <body>
-        <h1>Hello, Runner!</h1>
+        <h1>Hello, RegionTaxi!</h1>
     </body>
 </html>
